--- a/WsOTPQueryCVC-web/pom.xml
+++ b/WsOTPQueryCVC-web/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>WsOtpParameters</artifactId>
-    <groupId>co.com.claro.otpParameters</groupId>
+    <artifactId>WsOTPQueryCVC</artifactId>
+    <groupId>co.com.claro.otpQueryCVC</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-    <groupId>co.com.claro.otpParameters</groupId>
-    <artifactId>WsOtpParameters-web</artifactId>
+    <groupId>co.com.claro.otpQueryCVC</groupId>
+    <artifactId>WsOTPQueryCVC-web</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>WsOtpParameters-web</name>
+    <name>WsOTPQueryCVC-web</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -21,8 +21,8 @@
     
     <dependencies>
         <dependency>
-            <groupId>co.com.claro.otpParameters</groupId>
-            <artifactId>WsOtpParameters-ejb</artifactId>
+            <groupId>co.com.claro.otpQueryCVC</groupId>
+            <artifactId>WsOTPQueryCVC-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
