--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>co.com.claro.otpParameters</groupId>
-  <artifactId>WsOtpParameters</artifactId>
+  <groupId>co.com.claro.otpQueryCVC</groupId>
+  <artifactId>WsOTPQueryCVC</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>WsOtpParameters</name>
+  <name>WsOTPQueryCVC</name>
   <modules>
-    <module>WsOtpParameters-ear</module>
-    <module>WsOtpParameters-web</module>
-    <module>WsOtpParameters-ejb</module>
+    <module>WsOTPQueryCVC-ear</module>
+    <module>WsOTPQueryCVC-web</module>
+    <module>WsOTPQueryCVC-ejb</module>
   </modules>
 </project>
